# emacs-bazel-mode

./: .bazelrc  .dir-locals.el  .gitignore  BUILD  MODULE.bazel  Makefile  README  README.md  WORKSPACE  bazel-build.el  bazel-mode-test.el  bazel-mode-test.sh  bazel-mode.el  bazel-mode.elc  bazel.el  coverage  manual.org  test  test.el
.github/workflows/: bazel-test.yaml
lisp/: BUILD  bazel-build.el  bazel-mode-test.el  bazel-mode-test.sh  bazel-mode.el  bazel-util.el  bazelrc-mode.el
lisp/testdata/: buildifier.bzl  buildifier.json  compile.BUILD  fake_buildifier  make_buildifier_json  make_compile_out  xref.BUILD
obsolete/: BUILD  bazel-build.el  bazel-mode.el  bazel-util.el  bazelrc-mode.el
testdata/: bazelrc.org  buildifier.json  buildifier.org  compile.org  compile.out  completion-at-point.org  coverage.BUILD  coverage.org  coverage.out  defun-navigation.org  detangle.awk  fake_buildifier  fill.BUILD  find-file-at-point.org  fix-visibility.org  flymake.org  http-archive-invalid.org  http-archive-no-directory.org  http-archive-no-unique-prefix.org  http-archive.org  indent.org  library.h  library_test.cc  make_compile_out  make_coverage_out  make_fix_visibility_out  project.org  speedbar.org  target-completion-package.org  target-completion-repository.org  target-completion-root.org  target-completion-workspace.org  target-pattern-completion-package.org  target-pattern-completion-root.org  test-at-point-c++.org  test-at-point-elisp.org  test-at-point-go.org  test-at-point-python.org  test-at-point.org  test.WORKSPACE  (+4 more)
