# Copyright 2023 Philipp Stephani
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(name = "bazelbuild_emacs_bazel_mode")

bazel_dep(name = "phst_rules_elisp")
git_override(
    module_name = "phst_rules_elisp",
    commit = "6a17652b1205c36a27e07be86b6a15e61e67913a",
    remote = "https://github.com/phst/rules_elisp.git",
)

bazel_dep(name = "rules_license", version = "0.0.7")
